fixes to responsivess of site on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -168,8 +168,8 @@ textarea {
 .inner-container-bio {
   padding: 2em;
   border-radius: 0.75em;
-  /* margin-top: 10vh; */
-
+  float: right;
+  width: min-content;
   background-color: #141414;
   -webkit-box-shadow: 0px 10px 14px -3px rgba(0, 0, 0, 0.45);
   box-shadow: 0px 10px 14px -3px rgba(0, 0, 0, 0.45);
